tests/errors/semantics/constant_vars_require_constant_default_values.odl
main :: () -> void {
    x := 0;
    a :: x;

    a;
};
// foo_t :: struct {
//     T :: 10;
// };

// main :: () -> void {
//     t := foo_t.T;
//     printint(t);
//     println();
// };
